2017-01-03  Martin Galvan  <martingalvan@sourceware.org>

	* nptl/nptl-printers.py: Fix tabs/spaces mismatches.

2017-01-02  Joseph Myers  <joseph@codesourcery.com>

	[BZ #21019]
	* sysdeps/unix/sysv/linux/mips/mips64/n32/syscalls.list (lseek64):
	New syscall entry.
	* sysdeps/unix/sysv/linux/mips/mips64/n32/lseek.c: New file.
	* io/test-lfs.c (do_test): Test offset returned from lseek64 and
	lseek.

	* scripts/build-many-glibcs.py (Context.add_all_configs): Add
	power4 glibc for powerpc-linux-gnu.

2017-01-02  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysvipc/test-sysvsem.c (do_test): Define and use union semun on
	semctl.

2017-01-02  Joseph Myers  <joseph@codesourcery.com>

	* math/test-nearbyint-except.c: Include <stdbool.h>.
	(any_supported): New variable.
	(TEST_FUNC): Return early if !EXCEPTION_TESTS (FLOAT).  Otherwise
	set any_supported.
	(do_test): Return 77 if no floating-point type supported
	exceptions.

	* sysdeps/mips/math-tests.h (SNAN_TESTS_PRESERVE_PAYLOAD): Do not
	condition on [__mips_hard_float].

2017-01-02  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #21014]
	* sysdeps/i386/i686/multiarch/memchr-sse2-bsf.S (MEMCHR): Avoid overflow
	in pointer addition.
	* sysdeps/i386/i686/multiarch/memchr-sse2.S (MEMCHR): Likewise.

2017-01-02  Torvald Riegel  <triegel@redhat.com>

	* sysdeps/sparc/nptl/bits/pthreadtypes.h (pthread_cond_t): Adapt to
	new condvar.

2017-01-02  Joseph Myers  <joseph@codesourcery.com>

	* scripts/build-many-glibcs.py (Context.checkout): Default
	binutils version to 2.28 branch.

2017-01-01  Florian Weimer  <fweimer@redhat.com>

	* support/support_format_netent.c (support_format_netent): Work
	around alpha struct netent definition difference.

2017-01-01  Florian Weimer  <fweimer@redhat.com>

	* support/xwrite.c (xwrite): Use %td for pointer difference.

2017-01-01  Florian Weimer  <fweimer@redhat.com>

	* malloc/Makefile (tests): Add tst-malloc-usable-tunables for
	have-tunables only.